--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,6 +1,5 @@
 deploy:
-  - git clone https://github.com/HardikAgrawal2010/Minecraft-server/ /tmp/manifests
+  - git clone https://github.com/HardikAgrawal2010/Minecraft-server/
   - okteto build -t okteto.dev/java-fitnesse-demo:${OKTETO_GIT_COMMIT}
   - okteto build -t okteto.dev/devenv:${OKTETO_GIT_COMMIT} --target build
   - IMAGE=okteto.dev/java-fitnesse-demo:${OKTETO_GIT_COMMIT} envsubst < /tmp/manifests/application/manifest.yaml | kubectl apply -f -
-  - IMAGE=okteto.dev/devenv:${OKTETO_GIT_COMMIT} envsubst < /tmp/manifests/application/devenv/manifest.yaml | kubectl apply -f -
